Fixed cropper to have a round outline on Safari
On iOS/Safari outline does not follow the border-radius rule, so we use
box-shadow instead. (This is an old bug in Safari:
https://bugs.webkit.org/show_bug.cgi?id=20807)

--- a/Buttons/wwwroot/css/phone.css
+++ b/Buttons/wwwroot/css/phone.css
@@ -251,7 +251,8 @@ input[type=text]:focus-visible {
 }
 
 span.cropper-view-box {
-    outline: 3px solid #248232;
+    outline: 0;
+    box-shadow: 0 0 0 3px #248232;
 }
 
 span.cropper-face {
